# aztec-mobile-proving

./: .gitignore  Cargo.toml  README.md
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/circuits/: hash_chain512.json
android/app/src/main/assets/flows/: account_deploy.msgpack  token_transfer.msgpack
android/app/src/main/java/foundation/aztec/noirprover/: MainActivity.kt
circuits/hash_chain512/: Nargo.toml  inputs.json
circuits/hash_chain512/src/: main.nr
crates/noir-prover/: Cargo.toml
crates/noir-prover-jni/: Cargo.toml
crates/noir-prover-jni/src/: lib.rs
crates/noir-prover/src/: abort.rs  chonk.rs  error.rs  lib.rs  prover.rs  srs.rs  ultrahonk.rs  witgen.rs
crates/prover-cli/: Cargo.toml
crates/prover-cli/src/: main.rs
docs/: dependency-pinning.md  tx-inputs.md
rn-spike/: README.md
rn-spike/AztecPxeSpike/: App.tsx  app.json  package-lock.json  package.json
rn-spike/AztecPxeSpike/android/: settings.gradle
rn-spike/AztecPxeSpike/android/app/: build.gradle
rn-spike/AztecPxeSpike/android/app/src/main/java/com/aztecpxespike/: MainActivity.kt  MainApplication.kt  ProverModule.kt  ProverPackage.kt
rn-spike/AztecPxeSpike/android/app/src/main/java/foundation/aztec/noirprover/: NativeProver.kt
rn-spike/AztecPxeSpike/android/app/src/main/res/values/: strings.xml
rn-spike/AztecPxeSpike/ios/: Podfile
rn-spike/AztecPxeSpike/ios/AztecPxeSpike/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
rn-spike/AztecPxeSpike/ios/AztecPxeSpike.xcodeproj/: project.pbxproj
rn-spike/AztecPxeSpike/ios/AztecPxeSpike.xcodeproj/xcshareddata/xcschemes/: AztecPxeSpike.xcscheme
rn-spike/webview-pxe/: index.html  package-lock.json  package.json  vite.config.ts
rn-spike/webview-pxe/src/: main.ts
scripts/: build-jni.sh  build-zig-android-libcxx.sh  prepare-srs.sh
testnet/: .env.example  README.md  package-lock.json  package.json
testnet/src/: bench.ts  deploy_account.ts  native-prover.ts  private_transfer.ts  testnet.ts
testnet/src/bridge/: adb.ts  host.ts
wallet/: PLAN.md  README.md
wallet/app/: App.tsx  app.json  package-lock.json  package.json
wallet/app/__tests__/: benchStats.test.ts  bytes.test.ts
wallet/app/android/: settings.gradle
wallet/app/android/app/: build.gradle
wallet/app/android/app/src/main/java/foundation/aztec/noirprover/: NativeProver.kt
wallet/app/android/app/src/main/java/foundation/aztec/wallet/: AssetHttpServer.kt  MainActivity.kt  MainApplication.kt  MemoryModule.kt  ProverModule.kt  PxeServerModule.kt  SecureKeysModule.kt  WalletPackage.kt
wallet/app/android/app/src/main/res/values/: strings.xml
wallet/app/android/app/src/main/res/xml/: network_security_config.xml
wallet/app/src/: config.ts
wallet/app/src/bench/: benchStats.ts
wallet/app/src/keys/: keyStore.ts
wallet/app/src/native/: modules.ts
wallet/app/src/pxe/: PxeSession.ts
wallet/app/src/tokens/: tokenStore.ts
wallet/app/src/txs/: pendingTxStore.ts
wallet/app/src/ui/: components.tsx  screens.tsx  theme.ts
wallet/app/src/util/: bytes.ts
wallet/app/src/wallet/: WalletController.ts
wallet/pxe-web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
wallet/pxe-web/scripts/: host-smoke.mjs
wallet/pxe-web/src/: mem-store.ts  native-prover-bridge.ts  wallet-main.ts
wallet/scripts/: mem-watch.sh  sync-assets.sh
