[package]
name = "noir-prover"
version.workspace = true
edition.workspace = true
description = "On-device Barretenberg proving: ClientIVC (Chonk) core + optional ACVM/UltraHonk"

[dependencies]
barretenberg-rs.workspace = true
flate2.workspace = true
serde.workspace = true
serde_bytes.workspace = true
rmp-serde.workspace = true
thiserror.workspace = true

# Only needed by the optional `ultrahonk` feature (on-device ACVM witgen +
# standalone UltraHonk proving of a compiled Noir program).
acir = { workspace = true, optional = true }
acvm = { workspace = true, optional = true }
bn254_blackbox_solver = { workspace = true, optional = true }
noirc_abi = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
# Core = ClientIVC (Chonk) tx proving + SRS. Depends ONLY on barretenberg-rs.
default = []
# Optional: on-device ACVM witness generation + UltraHonk prove/verify of a
# standalone compiled Noir circuit. Pulls in the noir git crates.
ultrahonk = ["acir", "acvm", "bn254_blackbox_solver", "noirc_abi", "base64", "serde_json"]
